Corrections on mobile layout

--- a/src/components/post_card/index.css
+++ b/src/components/post_card/index.css
@@ -1,10 +1,10 @@
 .post_card {
-    background-color: white;
     width: 95vw;
     border-radius: 8px;
     height: 30vh;
     color: black;
     text-align: center;
+    height: 100%;
 }
 
 .post_title{
@@ -41,5 +41,7 @@
 }
 
 .card_content{
-    height: 100%;
+    background-color: white;
+    border-radius: 8px;
+    margin-bottom: 8vh;
 }
